fixes footer colors, and overflow on case study

--- a/src/scss/components/_case-study.scss
+++ b/src/scss/components/_case-study.scss
@@ -1,5 +1,6 @@
 #case-study {
     padding: 6rem 0 5rem;
+    overflow-x: hidden;
     position: relative;
     background: url('../images/thumbnail_IMG_3330.jpg') no-repeat;
     background-blend-mode: screen;
