--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -13,9 +13,9 @@
     }
     &__link {
         text-decoration: none;
-        color: $dark-green;
+        color: $orange;
         &:hover {
-            color: $lighter-green;
+            color: $light-orange;
         }
     }
     &__icon {
@@ -34,9 +34,9 @@
     }
     &__link {
         text-decoration: none;
-        color: $green;
+        color: $orange;
         &:hover {
-            color: $lighter-green;
+            color: $light-orange;
         }
     }
     
